Add Logger to Modules Upgrade to Bootstrap 4 Add AWS Logging

--- a/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
@@ -1,11 +1,11 @@
-﻿<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+﻿<li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
 
 @if (User?.Identity?.IsAuthenticated ?? false)
 {
-    <li><a asp-area="" asp-controller="Authentication" asp-action="SignOut">Log Out</a></li>
+    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Authentication" asp-action="SignOut">Log Out</a></li>
 }
 
 else
 {
-    <li><a asp-area="" asp-controller="Authentication" asp-action="SignIn">Login</a></li>
+    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Authentication" asp-action="SignIn">Login</a></li>
 }
