Added info to the Home page

--- a/src/Volvox.Helios.Web/Views/Home/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Index.cshtml
@@ -1,3 +1,37 @@
 ﻿@{
     ViewData["Title"] = "Home";
 }
+
+<div class="row">
+    <div class="col-12">
+        <h1 class="text-center">Volvox.Helios</h1>
+        <h6 class="text-center font-italic">A new kind of Discord bot.</h6>
+    </div>
+</div>
+
+<div class="row home-page-cards">
+    <div class="col">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Easy to Get Started</h5>
+                <p class="card-text">You can literally get this bot running with one button.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Modular</h5>
+                <p class="card-text">Volvox.Helios is built as a modular bot. Enable and disable modules as you see fit.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Customizable</h5>
+                <p class="card-text">Customize any module any way that you want.</p>
+            </div>
+        </div>
+    </div>
+</div>
