--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -32,13 +32,13 @@
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+    <main role="main" class="container body-content">
         @RenderBody()
         <hr />
         <footer>
             <p>&copy; 2018 - Volvox.Helios</p>
         </footer>
-    </div>
+    </main>
 
     <environment include="Development">
         <script src="~/vendor.min.js"></script>
