--- a/src/Volvox.Helios.Web/wwwroot/css/site.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/site.css
@@ -8,6 +8,7 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    padding-top: 10px
 }
 
 /* Carousel */
@@ -32,4 +33,30 @@
     .carousel-caption {
         display: none;
     }
+}
+
+
+/*
+ * Globals
+ */
+
+/* Links */
+a,
+a:focus,
+a:hover {
+    color: #fff;
+}
+
+/* Custom default button */
+.btn-secondary,
+.btn-secondary:hover,
+.btn-secondary:focus {
+    color: #333;
+    text-shadow: none; /* Prevent inheritance from `body` */
+    background-color: #fff;
+    border: .05rem solid #fff;
+}
+
+.home-page-cards {
+    margin-top: 30px
 }
