Fix Home view cards to look better on smaller devices

--- a/src/Volvox.Helios.Web/Views/Home/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 </div>
 
 <div class="row home-page-cards">
-    <div class="col">
+    <div class="col-sm">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Easy to Get Started</h5>
@@ -18,7 +18,7 @@
             </div>
         </div>
     </div>
-    <div class="col">
+    <div class="col-sm">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Modular</h5>
@@ -26,7 +26,7 @@
             </div>
         </div>
     </div>
-    <div class="col">
+    <div class="col-sm">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Customizable</h5>
