--- a/src/Volvox.Helios.Web/Views/_ViewImports.cshtml
+++ b/src/Volvox.Helios.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 @using Volvox.Helios.Web
 @using Volvox.Helios.Web.Models
+@addTagHelper *, Volvox.Helios.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
