--- a/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
@@ -12,14 +12,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="GuildId"></label>
-                <select asp-for="GuildId" class="form-control" asp-items="Model.Guilds">
+                <select onchange="getGuildChannels(this.value)" asp-for="GuildId" class="form-control" asp-items="Model.Guilds">
                     <option>Please select one</option>
                 </select>
                 <span asp-validation-for="GuildId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ChannelId"></label>
-                <input asp-for="ChannelId" class="form-control" />
+                <select id="channels" class="form-control"></select>
                 <span asp-validation-for="ChannelId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -31,4 +31,23 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    
+    <script>
+        function getGuildChannels(guildId) {
+            const channelsElement = $('#channels');
+
+            channelsElement.empty();
+
+            channelsElement.append('<option selected="true" disabled>Select a channel</option>');
+            channelsElement.prop('selectedIndex', 0);
+
+            const url = `/Settings/GetGuildChannels?guildId=${guildId}`;
+
+            $.getJSON(url, function (data) {
+                $.each(data, function (key, entry) {
+                    channelsElement.append($('<option></option>').attr('value', entry.id).text(entry.name));
+                })
+            });
+        }
+    </script>
 }
