--- a/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
@@ -13,13 +13,13 @@
             <div class="form-group">
                 <label asp-for="GuildId"></label>
                 <select onchange="getGuildChannels(this.value)" asp-for="GuildId" class="form-control" asp-items="Model.Guilds">
-                    <option>Please select one</option>
+                    <option selected disabled hidden>Please select one</option>
                 </select>
                 <span asp-validation-for="GuildId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ChannelId"></label>
-                <select id="channels" class="form-control"></select>
+                <select id="channels" class="form-control" disabled></select>
                 <span asp-validation-for="ChannelId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -38,8 +38,9 @@
 
             channelsElement.empty();
 
-            channelsElement.append('<option selected="true" disabled>Select a channel</option>');
+            channelsElement.append('<option selected="true" disabled hidden>Select a channel</option>');
             channelsElement.prop('selectedIndex', 0);
+            channelsElement.prop('disabled', false);
 
             const url = `/Settings/GetGuildChannels?guildId=${guildId}`;
 
