--- a/src/Volvox.Helios.Web/Views/_ViewImports.cshtml
+++ b/src/Volvox.Helios.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @using Volvox.Helios.Web
 @using Volvox.Helios.Web.Models
+@using Volvox.Helios.Web.Views.Home
 @addTagHelper *, Volvox.Helios.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
