Added the required settings for DotNet Core GDPR as per https://docs.microsoft.com/en-us/aspnet/core/security/gdpr?view=aspnetcore-2.1

--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
             </div>
         </div>
     </nav>
+
+    <partial name="_CookieConsentPartial" />
+
     <main role="main" class="container body-content">
         @RenderBody()
         <hr />
