Add ModuleSetting serivce Rename NowStreamingSettings model to StreamAnnouncerSettings Add context factory Add asp-for to Channel select Clean appsettings Clean Program.cs

--- a/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ChannelId"></label>
-                <select id="channels" class="form-control" disabled></select>
+                <select asp-for="ChannelId" id="channels" class="form-control" disabled></select>
                 <span asp-validation-for="ChannelId" class="text-danger"></span>
             </div>
             <div class="form-group">
