--- a/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
@@ -3,3 +3,30 @@
 }
 
 <h2>Settings</h2>
+
+<div class="row home-page-cards">
+    <div class="col-sm">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Stream Announcer <a class="float-right" asp-controller="Settings" asp-action="StreamAnnouncerSettings"><i class="fas fa-cog"></i></a></h5>
+                <p class="card-text">Announce to a specific channel when a user starts streaming to Twitch.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Modular</h5>
+                <p class="card-text">Volvox.Helios is built as a modular bot. Enable and disable modules as you see fit.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Customizable</h5>
+                <p class="card-text">Customize any module any way that you want.</p>
+            </div>
+        </div>
+    </div>
+</div>
