--- a/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
@@ -1,5 +1,5 @@
 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" asp-is-active>Home</a></li>
-<li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Settings" asp-action="StreamAnnouncerSettings" asp-is-active>Settings</a></li>
+<li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Settings" asp-is-active>Settings</a></li>
 
 
 @if (User?.Identity?.IsAuthenticated ?? false)
