--- a/src/Volvox.Helios.Web/Views/Authentication/SignIn.cshtml
+++ b/src/Volvox.Helios.Web/Views/Authentication/SignIn.cshtml
@@ -1,5 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Authentication
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 @model AuthenticationScheme[]
+
+@{
+    var returnUrl = @HttpContextAccessor.HttpContext.Request.Query["ReturnUrl"];
+}
 
 <div class="jumbotron">
     <h1>Authentication</h1>
@@ -9,7 +15,7 @@
     {
         <form action="/signin" method="post">
             <input type="hidden" name="Provider" value="@scheme.Name" />
-            <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
+            <input type="hidden" name="ReturnUrl" value="@returnUrl" />
 
             <button class="btn btn-lg btn-success" type="submit">Connect using @scheme.DisplayName</button>
         </form>
