--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,8 @@
             </div>
         </div>
     </nav>
+
+    <partial name="_CookieConsentPartial" />
     <main role="main" class="container body-content">
         @RenderBody()
         <hr />
