--- a/src/Volvox.Helios.Web/Views/Shared/_CookieConsentPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_CookieConsentPartial.cshtml
@@ -32,14 +32,11 @@
         </div>
     </nav>
 
-
-
-
     <script>
         (function () {
             document.querySelector("#cookieConsent button[data-cookie-string]").addEventListener("click", function (el) {
                 document.cookie = el.target.dataset.cookieString;
-                document.querySelector("#cookieConsent").classList.add("hidden");
+                document.querySelector("#cookieConsent").classList.add("d-none");
             }, false);
         })();
     </script>
