--- a/src/Volvox.Helios.Web/Views/Authentication/SignIn.cshtml
+++ b/src/Volvox.Helios.Web/Views/Authentication/SignIn.cshtml
@@ -1,17 +1,20 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @model AuthenticationScheme[]
 
+@{
+    ViewData["Title"] = "Login";
+}
+
 <div class="jumbotron">
     <h1>Authentication</h1>
-    <p class="lead text-left">Sign in using one of these external providers:</p>
-
+    
     @foreach (var scheme in Model)
     {
         <form action="/signin" method="post">
             <input type="hidden" name="Provider" value="@scheme.Name" />
             <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
 
-            <button class="btn btn-lg btn-success" type="submit">Connect using @scheme.DisplayName</button>
+            <button class="btn btn-lg btn-success" type="submit">@scheme.DisplayName</button>
         </form>
     }
 </div>
