--- a/src/Volvox.Helios.Web/Views/Home/Privacy.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Privacy.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h2>@ViewData["Title"]</h2>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h2>@ViewData["Title"]</h2>
+<hr/>
+
+<p>By using this website, you agree to our use of cookies. We only store essentialy authentication cookies.</p>
