--- a/src/Volvox.Helios.Web/Views/Shared/_CookieConsentPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_CookieConsentPartial.cshtml
@@ -8,25 +8,15 @@
 
 @if (showBanner)
 {
-    <nav id="cookieConsent" class="navbar navbar-expand-lg navbar-light bg-light fixed-top" role="alert">
+    <nav id="cookieConsent" class="navbar navbar-expand navbar-light bg-light fixed-bottom" role="alert">
         <div class="container">
-            <div class="navbar-header">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#cookieConsent .navbar-collapse">
-                    <span class="sr-only">Toggle cookie consent banner</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <span class="navbar-brand"><span class="fa fa-info-circle" aria-hidden="true"></span></span>
-            </div>
-
             <div class="navbar-collapse collapse">
                 <p class="navbar-text">
-                    Use this space to summarize your privacy and cookie use policy.
+                    By using this website, you agree to our use of cookies.
                 </p>
-                <div class="navbar-nv ml-auto">
-                    <a asp-area="" asp-controller="Home" asp-action="Privacy" class="btn btn-info navbar-btn">Learn More</a>
-                    <button type="button" class="btn btn-default navbar-btn" data-cookie-string="@cookieString">Accept</button>
+                <div class="navbar-nav ml-auto">
+                    <a asp-area="" asp-controller="Home" asp-action="Privacy" class="btn btn-outline-info" style="margin-right: 5px;">Learn More</a>
+                    <button type="button" class="btn btn-primary" data-cookie-string="@cookieString">Accept</button>
                 </div>
             </div>
         </div>
