Fix typo in Privacy view

--- a/src/Volvox.Helios.Web/Views/Home/Privacy.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Privacy.cshtml
@@ -5,4 +5,4 @@
 <h2>@ViewData["Title"]</h2>
 <hr/>
 
-<p>By using this website, you agree to our use of cookies. We only store essentialy authentication cookies.</p>
+<p>By using this website, you agree to our use of cookies. We only store essential authentication cookies.</p>
