Add GetUserAdminGuilds action Add Settings dropdown Add populateSettings jQuery plugin

--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -66,5 +66,10 @@
     </environment>
 
     @RenderSection("Scripts", required: false)
+    <script>
+        $(document).ready(() => {
+            $('#settingsDropDown').populateSettings();
+        });
+    </script>
 </body>
 </html>
