--- a/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
@@ -1,6 +1,13 @@
 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" asp-is-active>Home</a></li>
 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Settings" asp-action="Index" asp-is-active>Settings</a></li>
 
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Settings
+    </a>
+    <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="settingsDropDown">
+    </div>
+</li>
 
 @if (User?.Identity?.IsAuthenticated ?? false)
 {
