Populate Settings dropdown on click instead of on load

--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
 
     @RenderSection("Scripts", required: false)
     <script>
-        $(document).ready(() => {
+        $('#settingsNavDropdown').click(() => {
             $('#settingsDropDown').populateSettings();
         });
     </script>
