--- a/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
@@ -2,10 +2,10 @@
 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Settings" asp-action="Index" asp-is-active>Settings</a></li>
 
 <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="#" id="settingsNavDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Settings
     </a>
-    <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="settingsDropDown">
+    <div class="dropdown-menu" aria-labelledby="settingsNavDropdown" id="settingsDropDown">
     </div>
 </li>
 
