Add IsGuildInBot Fix typos Edit Settings controller routes Add "Loading..." to Settings drop-down Clean site.js

--- a/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
@@ -7,6 +7,7 @@
             Settings
         </a>
         <div class="dropdown-menu" aria-labelledby="settingsNavDropdown" id="settingsDropDown">
+            <div class="dropdown-item">Loading...</div>
         </div>
     </li>
     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Authentication" asp-action="SignOut" asp-is-active>Log Out</a></li>
