--- a/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
@@ -6,14 +6,18 @@
 
 <h2>Settings</h2>
 <hr/>
-
+<h4>Modules</h4>
 <div class="row">
     <div class="col-sm">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Stream Announcer <a style="color: black" class="float-right" asp-controller="Settings" asp-action="StreamAnnouncerSettings"><i class="fas fa-cog"></i></a></h5>
-                <p class="card-text">Announce to a specific channel when a user starts streaming to Twitch.</p>
-                
+                <h5 class="card-title">
+                    Stream Announcer
+                    <a style="color: black" class="float-right" asp-controller="Settings" asp-action="StreamAnnouncerSettings">
+                        <i class="fas fa-cog"></i>
+                    </a>
+                </h5>
+                <p class="card-text">Announce to a specific channel when a user starts streaming to Twitch</p>
             </div>
         </div>
     </div>
