--- a/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
@@ -11,15 +11,8 @@
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="GuildId"></label>
-                <select onchange="getGuildChannels(this.value)" asp-for="GuildId" class="form-control" asp-items="Model.Guilds">
-                    <option selected disabled hidden>Please select one</option>
-                </select>
-                <span asp-validation-for="GuildId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="ChannelId"></label>
-                <select asp-for="ChannelId" id="channels" class="form-control" disabled></select>
+                <select asp-for="ChannelId" asp-items="Model.Channels" id="channels" class="form-control"></select>
                 <span asp-validation-for="ChannelId" class="text-danger"></span>
             </div>
             <div class="form-check">
