--- a/src/Volvox.Helios.Web/Views/Home/About.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/About.cshtml
@@ -49,7 +49,7 @@
         Repository: <a href="https://github.com/BillChirico/Volvox.Helios">https://github.com/BillChirico/Volvox.Helios</a>
     </li>
     <li>
-        Project Board: <a href="https://github.com/BillChirico/Volvox.Helios/projects/1">https://github.com/BillChirico/Volvox.Helios/projects/1</a>
+        Project Board: <a href="https://github.com/BillChirico/Volvox.Helios/projects/">https://github.com/BillChirico/Volvox.Helios/projects/</a>
     </li>
     <li>
         Website: <a href="http://volvoxhelios.azurewebsites.net/">http://volvoxhelios.azurewebsites.net/</a>
