Updated /Home/About to reflect the new repo url.

--- a/src/Volvox.Helios.Web/Views/Home/About.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/About.cshtml
@@ -46,10 +46,10 @@
 <h5>Links</h5>
 <ul>
     <li>
-        Repository: <a href="https://github.com/BillChirico/Volvox.Helios">https://github.com/BillChirico/Volvox.Helios</a>
+        Repository: <a href="https://github.com/VolvoxCommunity/Volvox.Helios">https://github.com/VolvoxCommunity/Volvox.Helios</a>
     </li>
     <li>
-        Project Board: <a href="https://github.com/BillChirico/Volvox.Helios/projects/">https://github.com/BillChirico/Volvox.Helios/projects/</a>
+        Project Board: <a href="https://github.com/VolvoxCommunity/Volvox.Helios/projects/">https://github.com/VolvoxCommunity/Volvox.Helios/projects/</a>
     </li>
     <li>
         Website: <a href="http://volvoxhelios.azurewebsites.net/">http://volvoxhelios.azurewebsites.net/</a>
