Update AWS logging and About website

--- a/src/Volvox.Helios.Web/Views/Home/About.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/About.cshtml
@@ -49,10 +49,10 @@
         Repository: <a href="https://github.com/VolvoxCommunity/Volvox.Helios">https://github.com/VolvoxCommunity/Volvox.Helios</a>
     </li>
     <li>
-        Project Board: <a href="https://github.com/VolvoxCommunity/Volvox.Helios/projects/">https://github.com/VolvoxCommunity/Volvox.Helios/projects/</a>
+        Project Board: <a href="https://github.com/VolvoxCommunity/Volvox.Helios/projects">https://github.com/VolvoxCommunity/Volvox.Helios/projects</a>
     </li>
     <li>
-        Website: <a href="http://volvoxhelios.azurewebsites.net/">http://volvoxhelios.azurewebsites.net/</a>
+        Website: <a href="http://volvox.tech/">http://volvox.tech</a>
     </li>
     <li>
         Discord: <a href="https://discordapp.com/invite/jReSmc3">https://discordapp.com/invite/jReSmc3</a>
@@ -66,4 +66,3 @@
 <p>
     Announce to a specific channel when a user starts streaming to Twitch
 </p>
-
