--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -1,11 +1,18 @@
 ﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 <!DOCTYPE html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Volvox Helios" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.volvox.tech/" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image" content="http://etc.usf.edu/clipart/69300/69366/69366_algae_volvos_md.gif" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:description" content="A powerful, community built discord bot." />
     <title>@ViewData["Title"] - Volvox.Helios</title>
-
     <environment include="Development">
         <link rel="stylesheet" href="~/vendor.min.css" />
         <link rel="stylesheet" href="~/css/site.css" />
