--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.volvox.tech/" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="http://etc.usf.edu/clipart/69300/69366/69366_algae_volvos_md.gif" />
+    <meta property="og:image" content="~/images/volvox.PNG" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" />
     <meta property="og:description" content="A powerful, community built discord bot." />
