--- a/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ulong
+﻿@model Volvox.Helios.Web.ViewModels.Settings.SettingsIndexViewModel
 
 @{
     ViewData["Title"] = "Home";
@@ -8,17 +8,34 @@
 <hr />
 <h4>Modules</h4>
 <div class="row">
-    <div class="col-sm">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">
-                    Stream Announcer
-                    <a style="color: black" class="float-right" asp-controller="Settings" asp-action="StreamAnnouncerSettings">
-                        <i class="fas fa-cog"></i>
-                    </a>
-                </h5>
-                <p class="card-text">Announce to a specific channel when a user starts streaming to Twitch</p>
+    @* <div class="col-sm"> *@
+    @*     <div class="card"> *@
+    @*         <div class="card-body"> *@
+    @*             <h5 class="card-title"> *@
+    @*                 Stream Announcer *@
+    @*                 <a style="color: black" class="float-right" asp-controller="Settings" asp-action="StreamAnnouncerSettings"> *@
+    @*                     <i class="fas fa-cog"></i> *@
+    @*                 </a> *@
+    @*             </h5> *@
+    @*             <p class="card-text">Announce to a specific channel when a user starts streaming to Twitch</p> *@
+    @*         </div> *@
+    @*     </div> *@
+    @* </div> *@
+    
+    @foreach (var module in Model.Modules)
+    {
+        <div class="col-sm">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        @module.Name
+                        <a style="color: black" class="float-right" asp-controller="Settings" asp-action="StreamAnnouncerSettings">
+                            <i class="fas fa-cog"></i>
+                        </a>
+                    </h5>
+                    <p class="card-text">@module.Description</p>
+                </div>
             </div>
         </div>
-    </div>
+    }
 </div>
