--- a/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
@@ -8,20 +8,6 @@
 <hr />
 <h4>Modules</h4>
 <div class="row">
-    @* <div class="col-sm"> *@
-    @*     <div class="card"> *@
-    @*         <div class="card-body"> *@
-    @*             <h5 class="card-title"> *@
-    @*                 Stream Announcer *@
-    @*                 <a style="color: black" class="float-right" asp-controller="Settings" asp-action="StreamAnnouncerSettings"> *@
-    @*                     <i class="fas fa-cog"></i> *@
-    @*                 </a> *@
-    @*             </h5> *@
-    @*             <p class="card-text">Announce to a specific channel when a user starts streaming to Twitch</p> *@
-    @*         </div> *@
-    @*     </div> *@
-    @* </div> *@
-    
     @foreach (var module in Model.Modules)
     {
         <div class="col-sm">
@@ -29,7 +15,7 @@
                 <div class="card-body">
                     <h5 class="card-title">
                         @module.Name
-                        <a style="color: black" class="float-right" asp-controller="Settings" asp-action="StreamAnnouncerSettings">
+                        <a style="color: black" class="float-right" asp-controller="Settings" asp-action="@(module.Name.Replace(" ", "") + "Settings")">
                             <i class="fas fa-cog"></i>
                         </a>
                     </h5>
