--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Volvox Helios" />
+    <meta property="og:title" content="Volvox.Helios" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.volvox.tech/" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="~/images/volvox.PNG" />
+    <meta property="og:image" content="http://www.volvox.tech/images/volvox.png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" />
     <meta property="og:description" content="A powerful, community built discord bot." />
