Add Google site verification

--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="18JHtM67T9ZVSSo1HwwLB5r8lghAxcJba3RRZb3r_Lg" />
     <meta property="og:title" content="Volvox.Helios" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.volvox.tech/" />
