Move Login/Logout to right side of nav bar

--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                 <ul class="navbar-nav mr-auto">
                     @await Html.PartialAsync("_NavigationPartial")
                 </ul>
+                <ul class="navbar-nav ml-auto">
+                    @await Html.PartialAsync("_LoginNavigationPartial")
+                </ul>
             </div>
         </div>
     </nav>
