--- a/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
@@ -1,5 +1,9 @@
-<li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" asp-is-active>Home</a></li>
-<li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="About" asp-is-active>About</a></li>
+<li class="nav-item">
+    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" asp-is-active>Home</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About" asp-is-active>About</a>
+</li>
 
 @if (User?.Identity?.IsAuthenticated ?? false)
 {
