--- a/src/Volvox.Helios.Web/Views/Settings/StreamerRoleSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerRoleSettings.cshtml
@@ -15,7 +15,7 @@
                 <select asp-for="RoleId" asp-items="Model.Roles" id="channels" class="form-control"></select>
                 <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
-            <div class="form-check">
+            <div class="form-group form-check">
                 <input asp-for="Enabled" class="form-check-input" />
                 <label asp-for="Enabled" class="form-check-label"></label>
                 <span asp-validation-for="Enabled" class="text-danger"></span>
