--- a/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Volvox.Helios.Web.ViewModels.Settings.SettingsIndexViewModel
 
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Settings";
 }
 
-<h2>Settings</h2>
+<h2>@Model.GuildName</h2>
 <hr />
 <h4>Modules</h4>
 <div class="row">
