--- a/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
@@ -20,6 +20,13 @@
                 <label asp-for="Enabled" class="form-check-label"></label>
                 <span asp-validation-for="Enabled" class="text-danger"></span>
             </div>
+
+            <div class="form-check">
+                <input asp-for="ShouldDeleteMessagesOnstreamConclusion" class="form-check-input" />
+                <label asp-for="ShouldDeleteMessagesOnstreamConclusion" class="form-check-label"></label>
+                <span asp-validation-for="ShouldDeleteMessagesOnstreamConclusion" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-success" />
             </div>
