--- a/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
@@ -22,9 +22,9 @@
             </div>
 
             <div class="form-check">
-                <input asp-for="ShouldDeleteMessagesOnstreamConclusion" class="form-check-input" />
-                <label asp-for="ShouldDeleteMessagesOnstreamConclusion" class="form-check-label"></label>
-                <span asp-validation-for="ShouldDeleteMessagesOnstreamConclusion" class="text-danger"></span>
+                <input asp-for="RemoveMessages" class="form-check-input" />
+                <label asp-for="RemoveMessages" class="form-check-label"></label>
+                <span asp-validation-for="RemoveMessages" class="text-danger"></span>
             </div>
 
             <div class="form-group">
