--- a/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
@@ -20,8 +20,7 @@
                 <label asp-for="Enabled" class="form-check-label"></label>
                 <span asp-validation-for="Enabled" class="text-danger"></span>
             </div>
-
-            <div class="form-check">
+            <div class="form-check form-group">
                 <input asp-for="RemoveMessages" class="form-check-input" />
                 <label asp-for="RemoveMessages" class="form-check-label"></label>
                 <span asp-validation-for="RemoveMessages" class="text-danger"></span>
