hide DiscordFacingManager from the settings page

--- a/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model Volvox.Helios.Web.ViewModels.Settings.SettingsIndexViewModel
+﻿@using Volvox.Helios.Core.Modules.DiscordFacing
+@model Volvox.Helios.Web.ViewModels.Settings.SettingsIndexViewModel
 
 @{
     ViewData["Title"] = "Settings";
