--- a/src/Volvox.Helios.Web/Views/Home/About.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/About.cshtml
@@ -66,3 +66,10 @@
 <p>
     Announce to a specific channel when a user starts streaming to Twitch
 </p>
+<hr>
+<h5>Streamer Role</h5>
+<p> 
+    Using the Streamer Role Module on your server defines a role people will be assigned when they start a stream.<br>
+    Makes it easy to always know when you have someone streaming on the server! <br>
+    At least we know who to watch now.
+</p>
