--- a/src/Volvox.Helios.Web/Views/Home/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Index.cshtml
@@ -12,26 +12,65 @@
 <div class="row home-page-cards">
     <div class="col-sm">
         <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Easy to Get Started</h5>
+            <h5 class="card-header text-center">Easy to Get Started</h5>           
+            <div class="card-body">                
                 <p class="card-text">You can literally get this bot running with one button.</p>
             </div>
         </div>
     </div>
     <div class="col-sm">
         <div class="card">
+            <h5 class="card-header text-center">Modular</h5>
             <div class="card-body">
-                <h5 class="card-title">Modular</h5>
                 <p class="card-text">Volvox.Helios is built as a modular bot. Enable and disable modules as you see fit.</p>
             </div>
         </div>
     </div>
     <div class="col-sm">
         <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Customizable</h5>
+            <h5 class="card-header text-center">Customizable</h5>
+            <div class="card-body">               
                 <p class="card-text">Customize any module any way that you want.</p>
             </div>
         </div>
+    </div>
+</div>
+
+<br>
+<hr>
+<div class="row">
+    <div class="col-12">
+        <h5 class="text-center">Current Modules</h5>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <h5 class="card-header text-center">Stream Announcer</h5>
+            <div class="card-body">
+                <p class="card-text">
+                    With this module you are able to announce to a defined text channel when someone on the server goes live on Twitch.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <h5 class="card-header text-center">Stream Role</h5>
+            <div class="card-body">
+                <p class="card-text">
+                    This lets you add a role to someone who goes live on Twitch and remove it when they are done.  
+                    Take the new role and put it on the top of the list so everyone knows when someone is hosting a stream.
+                    At least now you have something else to watch on that second monitor when you are not paying attention to your own game. 
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+        
+        
     </div>
 </div>
