--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/vendor.min.css" />
+        <link rel="stylesheet" href="~/css/sb-admin2.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     </environment>
@@ -60,6 +61,7 @@
 
     <environment include="Development">
         <script src="~/vendor.min.js"></script>
+        <script src="~/js/sb-admin2.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
