--- a/src/Volvox.Helios.Web/Views/Shared/_Layout-archive.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout-archive.cshtml
@@ -1,4 +1,4 @@
-@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,6 +17,7 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/vendor.min.css" />
+        <link rel="stylesheet" href="~/css/sb-admin2.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="~/css/sidebar.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -61,6 +62,7 @@
 
     <environment include="Development">
         <script src="~/vendor.min.js"></script>
+        <script src="~/js/sb-admin2.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
