--- a/src/Volvox.Helios.Web/wwwroot/css/sidebar.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/sidebar.css
@@ -5,10 +5,18 @@
     width: 100%;
 }
 
-#sidebar {
-    min-width: 74px;
-    max-width: 74px;
+#serverbar {
+    min-width: 84px;
+    max-width: 84px;
+    padding-left: 10px;
+    padding-top: 5px;
     background: #202225;
+}
+
+#modulebar {
+    min-width: 200px;
+    max-width: 200px;
+    padding-left: 10px;
 }
 
 li.Server-Icons {
@@ -28,7 +36,7 @@ li.Server-Icons {
     width: 64px;
     padding-top: 5px;
     padding-bottom: 5px;
-    border: .25rem!important;
+    border-radius: 50%;
 }
 
 .color-enabled {
