--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -88,6 +88,10 @@
         $('#settingsNavDropdown').click(() => {
             $('#settingsDropDown').populateSettings();
         });
+
+        $('#analyticsNavDropdown').click(() => {
+            $('#analyticsDropDown').populateGuildsInBot();
+        });
     </script>
 </body>
 </html>
