--- a/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
@@ -15,4 +15,13 @@
             <div class="dropdown-item">Loading...</div>
         </div>
     </li>
+
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="analyticsNavDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Analytics
+        </a>
+        <div class="dropdown-menu" aria-labelledby="analyticsNavDropdown" id="analyticsDropDown">
+            <div class="dropdown-item">Loading...</div>
+        </div>
+    </li>
 }
