--- a/src/Volvox.Helios.Web/Views/Analytics/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Analytics/Index.cshtml
@@ -4,3 +4,17 @@
 
 <h2>Analytics</h2>
 <hr />
+
+<div class="col-sm">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">
+               ChatTracker
+                <a style="color: black" class="float-right" asp-controller="Analytics" asp-action="ChatTracker">
+                    <i class="fas fa-cog"></i>
+                </a>
+            </h5>
+            <p class="card-text">Description</p>
+        </div>
+    </div>
+</div>
